# Healthcare-Prediction-App

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  lung_disease_model.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
Prog/Project Files/Breast cancer/Code/: main.ipynb  nn.ipynb  nn_tabnet.ipynb
Prog/Project Files/Diabetes/: main.ipynb  undersample__after split_.ipynb  undersample_prior_split.ipynb
Prog/Project Files/Heart Diseases/: main.ipynb
Prog/Project Files/Liver Disease/: cirrhosis_multimodel.ipynb  cirrhosis_xgboost.ipynb
Prog/Project Files/Lung Disease/: Lung_CNN.ipynb  Lung_CNN_2.ipynb  Lung_CNN_2efficentnet.ipynb  Lung_CNN_2efficentnet_new.ipynb  lung_short.ipynb
Prog/UI/: page.html
app/: app.py  schemas.py
model_metadata/: README.md  breast_cancer.json  diabetes.json  heart_disease.json  liver_disease.json  lung_disease.json
models/: breast_cancer.joblib  diabetes.joblib  heart_disease.joblib  liver_disease.joblib
