[project]
name = "dissertation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2,<1.3",
    "fastapi>=0.115,<1.0",
    "joblib>=1.4,<2.0",
    "lightgbm>=4.6,<4.7",
    "numpy>=2.2,<3.0",
    "pandas>=2.2,<3.0",
    "pillow>=11.1,<12.0",
    "pydantic>=2.10,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "scikit-learn>=1.6,<1.7",
    "torch>=2.7,<2.8",
    "torchvision>=0.22,<0.23",
    "uvicorn[standard]>=0.30,<1.0",
    "xgboost>=3.0,<3.1",
]
